--- a/Site/hugo.toml
+++ b/Site/hugo.toml
@@ -19,15 +19,17 @@ enableGitalk = true
   headerIcon = "/images/GitHub-Mark-Light-32px.png"
   location = "Austria"
   enableGitalk = true
-  github_repos = true
+  github_repos = true 
+
+  
 
   [params.gitalk]
-    clientID = "$GITALK_CLIENT_ID"
-    clientSecret = "$GITALK_CLIENT_SECRET"
+    clientID = "{{ getenv "GITALK_CLIENT_ID" }}"
+    clientSecret = "{{ getenv "GITALK_CLIENT_SECRET" }}"
     repo = "NebelNite.github.io"
     owner = "NebelNite"
     admin = "NebelNite"
-    id = "location.pathname"
+    id = "{{ .Permalink }}"
     labels = "gitalk"
     perPage = 15
     pagerDirection = "last"
@@ -42,7 +44,7 @@ enableGitalk = true
 [frontmatter]
   lastmod = ["lastmod", ":fileModTime", ":default"]
 
-
-
+[markup.goldmark.renderer]
+unsafe = true
 
 
