--- a/.github/workflows/hugo.yaml
+++ b/.github/workflows/hugo.yaml
@@ -46,10 +46,10 @@ jobs:
           submodules: recursive
           fetch-depth: 0
 
- #     - name: Set up GitHub Secrets for Gitalk
- #       run: |
-  #        echo "GITALK_CLIENT_ID=${{ secrets.GITALK_CLIENT_ID }}" >> $GITHUB_ENV
-   #       echo "GITALK_CLIENT_SECRET=${{ secrets.GITALK_CLIENT_SECRET }}" >> $GITHUB_ENV
+      - name: Set up GitHub Secrets for Gitalk
+        run: |
+          echo "GITALK_CLIENT_ID=${{ secrets.GITALK_CLIENT_ID }}" >> $GITHUB_ENV
+          echo "GITALK_CLIENT_SECRET=${{ secrets.GITALK_CLIENT_SECRET }}" >> $GITHUB_ENV
 
 
       - name: Setup Pages
