--- a/Site/hugo.toml
+++ b/Site/hugo.toml
@@ -24,8 +24,8 @@ enableGitalk = true
   
 
   [params.gitalk]
-    clientID = "{{ getenv "GITALK_CLIENT_ID" }}"
-    clientSecret = "{{ getenv "GITALK_CLIENT_SECRET" }}"
+    clientID = "{{ getenv \"GITALK_CLIENT_ID\" }}"
+    clientSecret = "{{ getenv \"GITALK_CLIENT_SECRET\" }}"
     repo = "NebelNite.github.io"
     owner = "NebelNite"
     admin = "NebelNite"
@@ -35,7 +35,6 @@ enableGitalk = true
     pagerDirection = "last"
     createIssueManually = true
     distractionFreeMode = false
-    proxy = "https://cors-anywhere.azm.workers.dev/https://github.com/login/oauth/access_token"
 
   [[params.links]]
     title = "Link"
