--- a/.github/workflows/hugo.yaml
+++ b/.github/workflows/hugo.yaml
@@ -1,34 +1,25 @@
-# Sample workflow for building and deploying a Hugo site to GitHub Pages
 name: Deploy Hugo site to Pages
 
 on:
-  # Runs on pushes targeting the default branch
   push:
     branches:
       - main
-
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
   contents: read
   pages: write
   id-token: write
 
-# Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
-# However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
 concurrency:
   group: "pages"
   cancel-in-progress: false
 
-# Default to bash
 defaults:
   run:
     shell: bash
 
 jobs:
-  # Build job
   build:
     runs-on: ubuntu-latest
     env:
@@ -46,34 +37,34 @@ jobs:
           submodules: recursive
           fetch-depth: 0
 
-      - name: Set up GitHub Secrets for Gitalk
-        run: |
-          echo "GITALK_CLIENT_ID=${{ secrets.GITALK_CLIENT_ID }}" >> $GITHUB_ENV
-          echo "GITALK_CLIENT_SECRET=${{ secrets.GITALK_CLIENT_SECRET }}" >> $GITHUB_ENV
-
-
+      # Remove the GitHub Secrets step if not necessary
+      # Set Gitalk secrets directly for Hugo build step
       - name: Setup Pages
         id: pages
         uses: actions/configure-pages@v5
+
       - name: Install Node.js dependencies
         run: "[[ -f package-lock.json || -f npm-shrinkwrap.json ]] && npm ci || true"
+        
       - name: Build with Hugo
         env:
           HUGO_CACHEDIR: ${{ runner.temp }}/hugo_cache
           HUGO_ENVIRONMENT: production
           TZ: America/Los_Angeles
+          GITALK_CLIENT_ID: ${{ secrets.GITALK_CLIENT_ID }}  # Pass the secret as an env variable
+          GITALK_CLIENT_SECRET: ${{ secrets.GITALK_CLIENT_SECRET }}  # Pass the secret as an env variable
         run: |
           cd Site
           hugo \
             --gc \
             --minify \
-            --baseURL "${{ steps.pages.outputs.base_url }}/"          
+            --baseURL "${{ steps.pages.outputs.base_url }}/"
+          
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
           path: ./Site/public
 
-  # Deployment job
   deploy:
     environment:
       name: github-pages
@@ -84,4 +75,3 @@ jobs:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
-
